--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <!-- Card principal -->
     <div class="card">
       <div class="logo-circle">
-        <img src="https://i.postimg.cc/4x1pXNW0/Foto.png" alt="MugShopp">
+        <img src="https://i.postimg.cc/PqGM2rSD/1000389202-fotor-20260129134156.png" alt="MugShopp">
       </div>
 
       <div class="name">Luciana Pereira</div>
