--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       text-align: center;
     }
 
-    /* CABEÇALHO COMPACTO */
+    /* Cabeçalho compacto */
     .logo-top {
       margin: 0;
       padding: 0;
@@ -65,10 +65,13 @@
       left: 50%;
       transform: translateX(-50%);
       border: 2px solid #000;
+      overflow: hidden;
     }
 
     .logo-circle img {
-      width: 75%;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
     .name {
@@ -130,7 +133,7 @@
     <!-- Card principal -->
     <div class="card">
       <div class="logo-circle">
-        <img src="https://i.postimg.cc/PqGM2rSD/1000389202-fotor-20260129134156.png" alt="MugShopp">
+        <img src="https://i.postimg.cc/PqGM2rSD/1000389202-fotor-20260129134156.png" alt="Logo MugShopp Circular">
       </div>
 
       <div class="name">Luciana Pereira</div>
